Swagger annotations update.
